Renamed two packages, added logging functionality for server, and updated server UI

--- a/Client/src/main/java/com/alexhennieroed/desolationclient/ui/view/GameScreen.fxml
+++ b/Client/src/main/java/com/alexhennieroed/desolationclient/ui/view/GameScreen.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.alexhennieroed.desolation.ui.controller.GameScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.alexhennieroed.desolationclient.ui.controller.GameScreenController">
    <top>
       <Pane prefHeight="148.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
