--- a/Client/src/main/java/com/alexhennieroed/desolationclient/ui/view/NewUserScreen.fxml
+++ b/Client/src/main/java/com/alexhennieroed/desolationclient/ui/view/NewUserScreen.fxml
@@ -11,16 +11,16 @@
 <?import javafx.scene.text.Font?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.alexhennieroed.desolation.ui.controller.LoginScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.alexhennieroed.desolationclient.ui.controller.NewUserScreenController">
    <bottom>
       <HBox prefHeight="28.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#login" text="Log In">
+            <Button mnemonicParsing="false" onAction="#makeUser" text="Create User">
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="10.0" top="5.0" />
                </HBox.margin>
             </Button>
-            <Label fx:id="loginStatusLabel">
+            <Label fx:id="statusLabel">
                <HBox.margin>
                   <Insets left="5.0" top="10.0" />
                </HBox.margin>
