Fixed character updating and began working on server admin controls

--- a/Client/src/main/java/com/alexhennieroed/desolationclient/ui/view/LoginScreen.fxml
+++ b/Client/src/main/java/com/alexhennieroed/desolationclient/ui/view/LoginScreen.fxml
@@ -15,7 +15,7 @@
    <bottom>
       <HBox prefHeight="28.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#login" text="Log In">
+            <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" text="Log In">
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="10.0" top="5.0" />
                </HBox.margin>
