--- a/Client/src/main/java/com/alexhennieroed/desolationclient/ui/view/NewUserScreen.fxml
+++ b/Client/src/main/java/com/alexhennieroed/desolationclient/ui/view/NewUserScreen.fxml
@@ -15,7 +15,7 @@
    <bottom>
       <HBox prefHeight="28.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#makeUser" text="Create User">
+            <Button fx:id="makeUserButton" mnemonicParsing="false" onAction="#makeUser" text="Create User">
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="10.0" top="5.0" />
                </HBox.margin>
