--- a/Server/src/main/java/com/alexhennieroed/desolationserver/ui/view/ServerControl.fxml
+++ b/Server/src/main/java/com/alexhennieroed/desolationserver/ui/view/ServerControl.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -108,6 +109,21 @@
                   </VBox>
                </content>
           </Tab>
+            <Tab text="Chat">
+               <content>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <ListView fx:id="chatListView" prefHeight="514.0" prefWidth="340.0" />
+                        <HBox prefHeight="14.0" prefWidth="340.0">
+                           <children>
+                              <TextField fx:id="messageField" prefHeight="31.0" prefWidth="285.0" />
+                              <Button fx:id="sendMessageButton" mnemonicParsing="false" onAction="#sendMessage" text="Send" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </content>
+            </Tab>
         </tabs>
       </TabPane>
    </center>
