--- a/Client/src/main/java/com/alexhennieroed/desolationclient/ui/view/GameScreen.fxml
+++ b/Client/src/main/java/com/alexhennieroed/desolationclient/ui/view/GameScreen.fxml
@@ -2,15 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.alexhennieroed.desolationclient.ui.controller.GameScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="850.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.alexhennieroed.desolationclient.ui.controller.GameScreenController">
    <top>
       <Pane prefHeight="148.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" layoutX="65.0" layoutY="44.0" text="DESOLATION" textAlignment="CENTER">
+            <Label alignment="CENTER" layoutX="265.0" layoutY="18.0" text="DESOLATION" textAlignment="CENTER">
                <font>
                   <Font name="High Tower Text" size="96.0" />
                </font>
@@ -21,12 +24,24 @@
    <center>
       <Pane prefHeight="200.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" layoutX="287.0" layoutY="212.0" text="Welcome to the game." textAlignment="CENTER">
+            <Label alignment="CENTER" layoutX="6.0" layoutY="4.0" text="Current Time:" textAlignment="CENTER">
                <font>
-                  <Font name="High Tower Text" size="24.0" />
+                  <Font name="High Tower Text" size="18.0" />
                </font>
             </Label>
-            <Button layoutX="368.0" layoutY="407.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
+            <Button layoutX="571.0" layoutY="665.0" mnemonicParsing="false" onAction="#leaveGame" text="Leave" />
+            <Label fx:id="currentTimeLabel" layoutX="125.0" layoutY="5.0">
+               <font>
+                  <Font name="Times New Roman" size="18.0" />
+               </font>
+            </Label>
+            <Pane fx:id="messagePane" layoutX="6.0" layoutY="462.0" prefHeight="234.0" prefWidth="301.0">
+               <children>
+                  <ListView fx:id="messageListView" prefHeight="200.0" prefWidth="300.0" />
+                  <TextField fx:id="messageField" layoutX="1.0" layoutY="201.0" onAction="#sendMessage" prefHeight="31.0" prefWidth="300.0" />
+                  <Line endX="245.0" layoutX="55.0" layoutY="200.0" startX="-54.0" />
+               </children>
+            </Pane>
          </children>
       </Pane>
    </center>
