--- a/Server/src/main/java/com/alexhennieroed/desolationserver/ui/view/ServerControl.fxml
+++ b/Server/src/main/java/com/alexhennieroed/desolationserver/ui/view/ServerControl.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.alexhennieroed.desolationserver.ui.controller.ServerControlController">
@@ -82,6 +83,13 @@
                         </Label>
                         <Label fx:id="lastSaveLabel" layoutX="105.0" layoutY="324.0" />
                         <Label fx:id="serverStatusLabel" layoutX="136.0" layoutY="15.0" />
+                        <Label layoutX="14.0" layoutY="137.0" text="Current Time:">
+                           <font>
+                              <Font name="Times New Roman" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="gameTimeLabel" layoutX="125.0" layoutY="137.0" />
+                        <Button fx:id="gameControlButton" layoutX="14.0" layoutY="484.0" mnemonicParsing="false" onAction="#startGame" text="Start" />
                      </children>
                   </Pane>
                </content>
@@ -113,13 +121,9 @@
                <content>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <ListView fx:id="chatListView" prefHeight="514.0" prefWidth="340.0" />
-                        <HBox prefHeight="14.0" prefWidth="340.0">
-                           <children>
-                              <TextField fx:id="messageField" prefHeight="31.0" prefWidth="285.0" />
-                              <Button fx:id="sendMessageButton" mnemonicParsing="false" onAction="#sendMessage" text="Send" />
-                           </children>
-                        </HBox>
+                        <ListView fx:id="chatListView" focusTraversable="false" prefHeight="514.0" prefWidth="340.0" />
+                        <Line endX="100.0" startX="-240.0" />
+                        <TextField fx:id="messageField" onAction="#sendMessage" prefHeight="31.0" prefWidth="340.0" />
                      </children>
                   </VBox>
                </content>
