--- a/Client/src/main/java/com/alexhennieroed/desolationclient/ui/view/GameScreen.fxml
+++ b/Client/src/main/java/com/alexhennieroed/desolationclient/ui/view/GameScreen.fxml
@@ -4,8 +4,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
@@ -22,27 +24,32 @@
       </Pane>
    </top>
    <center>
-      <Pane prefHeight="200.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+      <StackPane BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" layoutX="6.0" layoutY="4.0" text="Current Time:" textAlignment="CENTER">
-               <font>
-                  <Font name="High Tower Text" size="18.0" />
-               </font>
-            </Label>
-            <Button layoutX="571.0" layoutY="665.0" mnemonicParsing="false" onAction="#leaveGame" text="Leave" />
-            <Label fx:id="currentTimeLabel" layoutX="125.0" layoutY="5.0">
-               <font>
-                  <Font name="Times New Roman" size="18.0" />
-               </font>
-            </Label>
-            <Pane fx:id="messagePane" layoutX="6.0" layoutY="462.0" prefHeight="234.0" prefWidth="301.0">
+            <ImageView fx:id="displayImageView" fitHeight="704.0" fitWidth="1200.0" opacity="0.5" pickOnBounds="true" preserveRatio="true" />
+            <Pane prefHeight="200.0" prefWidth="800.0">
                <children>
-                  <ListView fx:id="messageListView" prefHeight="200.0" prefWidth="300.0" />
-                  <TextField fx:id="messageField" layoutX="1.0" layoutY="201.0" onAction="#sendMessage" prefHeight="31.0" prefWidth="300.0" />
-                  <Line endX="245.0" layoutX="55.0" layoutY="200.0" startX="-54.0" />
+                  <Label alignment="CENTER" layoutX="6.0" layoutY="4.0" text="Current Time:" textAlignment="CENTER">
+                     <font>
+                        <Font name="High Tower Text" size="18.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="571.0" layoutY="665.0" mnemonicParsing="false" onAction="#leaveGame" text="Leave" />
+                  <Label fx:id="currentTimeLabel" layoutX="125.0" layoutY="5.0">
+                     <font>
+                        <Font name="Times New Roman" size="18.0" />
+                     </font>
+                  </Label>
+                  <Pane fx:id="messagePane" layoutX="6.0" layoutY="462.0" prefHeight="234.0" prefWidth="301.0">
+                     <children>
+                        <ListView fx:id="messageListView" prefHeight="200.0" prefWidth="300.0" />
+                        <TextField fx:id="messageField" layoutX="1.0" layoutY="201.0" onAction="#sendMessage" prefHeight="31.0" prefWidth="300.0" />
+                        <Line endX="245.0" layoutX="55.0" layoutY="200.0" startX="-54.0" />
+                     </children>
+                  </Pane>
                </children>
             </Pane>
          </children>
-      </Pane>
+      </StackPane>
    </center>
 </BorderPane>
